# neon-37

./: .gitattributes  .gitignore  CMakeLists.txt  DOCUMENTATION_AUDIT_2026.md  DOCUMENTATION_UPDATES.md  MOD_WHEEL_IMPLEMENTATION.md  Neon37_Specification.md  PRESET_CREATION_GUIDE.md  USER_MANUAL.md  generate_remaining_presets.py  task_list.md
.agent/: project_status.md
.agent_memory/: anti_aliasing_improvement.md  patch_management_feature.md
.github/workflows/: build.yml
Source/: CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: apply_patch_if_needed.cmake  juce-ladderfilter-smoothing.patch
presets/: Exmple patch.xml
presets/001_Piano/: 001_Synth_Piano.xml  002_EP_Clean.xml  003_EP_Bright.xml  004_Clav.xml  005_Harpsichord.xml  006_Celesta.xml  007_Glockenspiel.xml  008_Music_Box.xml
presets/002_Chromatic/: 009_Marimba.xml  010_Vibraphone.xml  011_Xylophone.xml  012_Tubular_Bells.xml  013_Dulcimer.xml  014_Kalimba.xml  015_Steel_Drums.xml  016_Timpani.xml
presets/003_Organ/: 017_Pipe_Organ.xml  018_Electric_Organ_1.xml  019_Electric_Organ_2.xml  020_Harmonica.xml  021_Accordion.xml  022_Concertina.xml  023_Harmonic.xml  024_Tonewheel_Organ.xml
presets/004_Guitar/: 025_Acoustic_Guitar.xml  026_Electric_Guitar_Clean.xml  027_Electric_Guitar_Overdrive.xml  028_Electric_Guitar_Distortion.xml  029_Sitar.xml  030_Banjo.xml  031_Mandolin.xml  032_Shamisen.xml
presets/005_Bass/: 033_Synth_Bass_1.xml  034_Synth_Bass_2.xml  035_Synth_Bass_3_Wobble.xml  036_Electric_Bass.xml  037_Acoustic_Bass.xml  038_Fretless_Bass.xml  039_Pick_Bass.xml  040_Slap_Bass.xml
presets/006_Strings/: 041_Violin.xml  042_Viola.xml  043_Cello.xml  044_Contrabass.xml  045_Tremolo_Strings.xml  046_Pizzicato.xml  047_Harp.xml  048_Pad_Strings.xml
presets/007_Ensemble/: 049_Choir_Aahs.xml  050_Choir_Oohs.xml  051_Strings_1.xml  052_Strings_2.xml  053_Synth_Strings.xml  054_Bright_Ensemble.xml  055_Warm_Ensemble.xml  056_Full_Ensemble.xml
presets/008_Brass/: 057_Trumpet.xml  058_Trombone.xml  059_Tuba.xml  060_French_Horn.xml  061_Brass_Section.xml  062_Bright_Brass.xml  063_Warm_Brass.xml  064_Stab_Brass.xml
(+32 files in other folders)
